<resources>
    <string name="app_name">CSE476map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Main</string>
    <string name="button">Game Start</string>
    <string name="done">Done</string>
    <string name="Initial">Input Users\' Names Below</string>
    <string name="User1">Name1</string>
    <string name="User2">Name2</string>
    <string name="Player1">Player1</string>
    <string name="Player2">Player2</string>
    <string name="GameView">GameView</string>
    <string name="GameDescription">GameDescription</string>
    <string name="Detail">Each player is then given 4 ships. Each must place all 4 of their ships somewhere on their grid. Once both players have placed their ships, the battle begins. Users alternate turns guessing the location of the opposite players\' ships. Whichever player destroys all the ships of their opponent first wins.</string>
    <string name="ok">I Get It!</string>
    <string name="Help">Game Description</string>
    <string name="giveup">Surrender</string>
    <string name="Warning">You need set all 4 boats to start the game!!</string>
    <string name="SetBoats">Go back to set your boats.</string>
    <string name="WarningClick">Destroy your enemy!</string>
    <string name="ClickBoat">Make a choice! Find your enemy\'s boat!</string>
    <string name="textview">TextView</string>
    <string name="restart_the_game">Restart the Game</string>
    <string name="choose_game">Choose Game</string>
    <string name="local">Local With Two Players</string>
    <string name="online">Playing Online</string>
    <string name="login_game">Star Collect</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="create_new_user">Add New User</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="back">Back</string>
    <string name="fail">File to add new user</string>
    <string name="empty">Username and Password cannot be empty.</string>
    <string name="passNotSame">Two password not same.</string>
    <string name="WrongPass">User name or Password wrong!</string>
    <string name="waiting">Waiting</string>

    <string name="welcome_image">image_welcome</string>
    <string name="login_text">LOGIN</string>
    <string name="collect">Collect</string>
    <string name="dummy">Dummy</string>
    <string name="newgame">New Game</string>
    <string name="endgame">End Game</string>
    <string name="surrender">surrender</string>
    <string name="YouWin">You Win!</string>
    <string name="YouLose">You Lose!</string>
    <string name="YouSurrender">You Surrender!</string>
</resources>
